add some file